[package]
name = "staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "=1.17.17"
winnow = "=0.4.1"
toml_datetime = "=0.6.1"
mpl-token-metadata = { version = "4.1.2" }
bytemuck = "1.15.0"
